--- a/css/wc-lookbook-frontend.css
+++ b/css/wc-lookbook-frontend.css
@@ -54,7 +54,7 @@
   content: '';
   position: absolute;
   top: -6px;
-  left: 20%;
+  left: 50%;
   margin-left: -6px;
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
@@ -104,7 +104,9 @@ a.wc-lookbook-image-tag h4 small {
 	
 	height: 80px !important;
 	width: 80px !important;
-	
+	position: absolute;
+    left: 5%;
+    bottom: 10%;
 }
 
 .wc-lookbook {
